<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="28dp"
        android:paddingVertical="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <TextView
                style="@style/Texto.Etiqueta"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/app_name"
                android:textColor="@color/tinta" />

            <ImageView
                android:id="@+id/boton_volver"
                style="@style/Boton.Volver"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginEnd="-8dp"
                android:contentDescription="@string/boton_volver"
                android:src="@drawable/ic_volver" />

        </LinearLayout>

        <TextView
            style="@style/Texto.Titulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:text="@string/main_seccion_personalizar" />

        <View
            style="@style/Linea"
            android:layout_marginTop="16dp" />


        <LinearLayout
            android:id="@+id/fila_estilo"
            style="@style/Fila.Menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:paddingVertical="12dp">

                <TextView
                    style="@style/Texto.Subtitulo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/main_fila_estilo" />

                <TextView
                    style="@style/Texto.Secundario"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/main_fila_estilo_desc" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:importantForAccessibility="no"
                android:text="@string/flecha"
                android:textColor="@color/tinta"
                android:textSize="20sp" />
        </LinearLayout>

        <View style="@style/Linea" />

        <LinearLayout
            android:id="@+id/fila_tutorial"
            style="@style/Fila.Menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:paddingVertical="12dp">

                <TextView
                    style="@style/Texto.Subtitulo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/main_fila_tutorial" />

                <TextView
                    style="@style/Texto.Secundario"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/main_fila_tutorial_desc" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:importantForAccessibility="no"
                android:text="@string/flecha"
                android:textColor="@color/tinta"
                android:textSize="20sp" />
        </LinearLayout>

        <View style="@style/Linea" />

    </LinearLayout>
</ScrollView>
